[package]
name = "scurry"
version = "0.2.0"
authors = ["Diego Frias <styx5242@gmail.com>"]
license = "MIT"
description = "A component-based object-oriented language"
readme = "README.md"
homepage = "https://github.com/dzfrias/scurry"
repository = "https://github.com/dzfrias/scurry"
keywords = ["cli", "language", "compiler"]
categories = ["compilers"]
rust-version = "1.65.0"
edition = "2021"
exclude = ["/website"]

[dependencies]
logos = "0.12.1"
clap = { version = "4.0.13", features = ["derive"] }
rustyline = "10.0.0"
thiserror = "1.0.37"
