[package]
name = "scurry"
version = "0.4.0"
authors = ["Diego Frias <styx5242@gmail.com>"]
license = "MIT"
description = "A component-based object-oriented language"
readme = "README.md"
homepage = "https://github.com/dzfrias/scurry"
repository = "https://github.com/dzfrias/scurry"
keywords = ["cli", "language", "compiler"]
categories = ["compilers"]
rust-version = "1.65.0"
edition = "2021"
exclude = ["/website"]

[dependencies]
logos = "0.12.1"
thiserror = "1.0.37"
snailquote = "0.3.1"
clap = { version = "4.0.13", features = ["derive"], optional = true }
rustyline = { version = "10.0.0", optional = true }
rustyline-derive = { version = "0.7.0", optional = true }

[build-dependencies]
clap = { version = "4.0.13", features = ["derive"] }
clap_complete = { version = "4.0.6" }
clap_mangen = { version = "0.2.5" }

[features]
default = ["rustyline", "clap", "rustyline-derive"]
